# Rust-Profiler

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml
.github/workflows/: rust.yml
benchmarks/: all_cores.rs  lib.rs  single_core.rs
src/: lib.rs  main.rs
src/front/: index.css  index.html  index.mjs  index_404.html
src/routes/: cpu_info.rs  disk_info.rs  full_system.rs  get_roots.rs  memory_info.rs  mod.rs  realtime_cpu.rs  realtime_memory.rs  return_404.rs  return_500.rs  users_info.rs
src/system/: app_state.rs  cpu.rs  disks.rs  full_system.rs  memory.rs  mod.rs  users.rs  utils.rs
tests/: routes.rs  utils.rs
