[package]
name = "rust-profiler"
authors = ["ByteSudoer"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ByteSudoer/Rust-Profiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
sysinfo = "0.29.5"
tracing = "0.1.37"
raw-cpuid = "11.0.1"
users = "0.11.0"
[dependencies.serde]
version = "1.0.174"
features = ["derive"]


[dependencies.axum]
version = "0.6.9"
features = ["macros", "ws"]


[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

# [lib]
# name = "utils"
# path = "src/lib.rs"
