[package]
name = "rust-profiler"
authors = ["ByteSudoer <soussi.mohamednour@gmail.com"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ByteSudoer/Rust-Profiler"


default-run = "rust-profiler"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
sysinfo = "0.29.5"
tracing = "0.1.37"
raw-cpuid = "11.0.1"
users = "0.11.0"
dotenv = "0.15.0"
[dependencies.serde]
version = "1.0.174"
features = ["derive"]


[dependencies.axum]
version = "0.6.9"
features = ["macros", "ws"]


[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dev-dependencies]
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rstest = "0.18.1"


[[bin]]
name = "rust-profiler"
path = "src/main.rs"

# [lib]
# name = "utils"
# path = "src/lib.rs"

[[bin]]
name = "single_core"
path = "benchmarks/lib.rs"
